# ffmpeg_test

./: README.md
apiTest/: CMakeLists.txt  README.md  main.c  test.c
apiTest/include/: common.h  decoderTest.h  openFile.h  setDemuxer.h
apiTest/src/: decoderTest.c  openFile.c  setDemuxer.c
demoTemplate/: CMakeLists.txt  README.md  main.c
demoTemplate/src/: CMakeLists.txt
imgCheck/: CMakeLists.txt  README.md  main.cpp
imgCheck/include/: bmpReader.h  imgReader.h  my_image.h  pngReader.h
imgCheck/src/: CMakeLists.txt  bmpReader.cpp  imgReader.cpp  my_image.cpp  pngReader.cpp
